[package]
name = "parsec-vdd-rust"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Rohit Sangwan <rohitsangwan01@gmail.com>"]
repository = "https://github.com/rohitsangwan01/parsec-vdd-rust"
description = "Unofficial client for Parsec Virtual Display driver"
documentation = "https://github.com/rohitsangwan01/parsec-vdd-rust"

[[bin]]
name = "parsec-vdd-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }
